Fixed Header covering body by changing padding-bottom of body.

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 100px;
 }
 
 h1 {
@@ -351,7 +352,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100vw;
-    height: auto;
+    height: 100px;
     background-color: var(--UofTBlue);
     display: flex;
     align-items: center;
